--- a/src/index.html
+++ b/src/index.html
@@ -7,27 +7,27 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-    <link rel="stylesheet" href="/assets/css/Site.css" />
-    <link rel="stylesheet" href="/assets//admin-lte/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="/assets/admin-lte/css/ionicons.min.css" />
-    <link rel="stylesheet" href="/assets/admin-lte/css/AdminLTE.min.css" />
-    <link rel="stylesheet" href="/assets/admin-lte/css/skin-blue.min.css" />
-    <link rel="stylesheet" href="/assets/admin-lte/css/blue.css" />
-    <link rel="stylesheet" href="/assets/css/toastr.min.css" />
-    <link rel="stylesheet" href="/assets/admin-lte/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/admin-lte/bower_component/select2/dist/css/select2.css" />
+    <link rel="stylesheet" href="../../assets/css/Site.css" />
+    <link rel="stylesheet" href="../../assets//admin-lte/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="../../assets/admin-lte/css/ionicons.min.css" />
+    <link rel="stylesheet" href="../../assets/admin-lte/css/AdminLTE.min.css" />
+    <link rel="stylesheet" href="../../assets/admin-lte/css/skin-blue.min.css" />
+    <link rel="stylesheet" href="../../assets/admin-lte/css/blue.css" />
+    <link rel="stylesheet" href="../../assets/css/toastr.min.css" />
+    <link rel="stylesheet" href="../../assets/admin-lte/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../assets/admin-lte/bower_component/select2/dist/css/select2.css" />
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
   <app-root></app-root>
   <!-- <script type="text/javascript" src="/assets/admin-lte/js/jquery.min.js"></script> -->
-  <script type="text/javascript" src="/assets/js/jquery-3.3.1.min.js"></script>
-  <script type="text/javascript" src="/assets/admin-lte/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/assets/admin-lte/js/adminlte.min.js"></script>
-  <script type="text/javascript" src="/assets/admin-lte/js/icheck.min.js"></script>
-  <script type="text/javascript" src="/assets/js/modernizr-2.8.3.js"></script>
-  <script type="text/javascript" src="/assets/js/toastr.min.js"></script>
-  <script type="text/javascript" src="/assets/admin-lte/bower_component/select2/dist/js/select2.js"></script>
-  <script src="/assets/js/dataTables.min.js"></script>
+  <script type="text/javascript" src="../../assets/js/jquery-3.3.1.min.js"></script>
+  <script type="text/javascript" src="../../assets/admin-lte/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../../assets/admin-lte/js/adminlte.min.js"></script>
+  <script type="text/javascript" src="../../assets/admin-lte/js/icheck.min.js"></script>
+  <script type="text/javascript" src="../../assets/js/modernizr-2.8.3.js"></script>
+  <script type="text/javascript" src="../../assets/js/toastr.min.js"></script>
+  <script type="text/javascript" src="../../assets/admin-lte/bower_component/select2/dist/js/select2.js"></script>
+  <script src="../../assets/js/dataTables.min.js"></script>
   
 
   <script>
